include html pages

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <link rel="stylesheet" href="<%= BASE_URL %>css/style.css">
+    <link rel="stylesheet" type="text/css" href="<%= BASE_URL %>css/bootstrap.css" />
+
+    <!--owl slider stylesheet -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  
+    <!-- font awesome style -->
+    <link href="<%= BASE_URL %>css/font-awesome.min.css" rel="stylesheet" />
+  
+    <!-- Custom styles for this template -->
+    <link href="<%= BASE_URL %>css/style.css" rel="stylesheet" />
+    <!-- responsive style -->
+    <link href="<%= BASE_URL %>css/responsive.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
